--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -24,7 +24,7 @@
     font-weight: 900;
 
     span {
-      color: var(--cyan);
+      color: var(--red);
     }
   }
 
@@ -34,7 +34,7 @@
     margin-top: 1.5rem;
 
     span {
-      color: var(--cyan);
+      color: var(--red);
       font-weight: bold;
     }
   }
