--- a/src/pages/posts/post.module.scss
+++ b/src/pages/posts/post.module.scss
@@ -37,5 +37,30 @@
         margin: 0.5rem 0;
       }
     }
+
+    &.previewContent {
+      background: linear-gradient(var(--gray-light), transparent);
+      background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+  }
+}
+
+.continueReading {
+  padding: 2rem;
+  text-align: center;
+  background: #1f2729;
+  border-radius: 100px;
+  font-size: 1.25rem;
+  font-weight: bold;
+  margin: 4rem 0 2rem;
+
+  a {
+    color: var(--yellow);
+    margin-left: 0.5rem;
+
+    &:hover {
+      text-decoration: underline;
+    }
   }
 }
